--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:141infIO,iv:BF9lSUcKyV5DE1BJeweLRFL/vlqwx8mvYb7SV/3Nrwo=,tag:PiramFsh6MlW7cohKJv9YQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:A1LkZQ07,iv:9zkslgq72QyrdVMQw+WNxa0m6jcy1q8+sF2VawzM+RA=,tag:O5rcYoIh0MQhTzI4lbXagg==,type:str]
+kind: ENC[AES256_GCM,data:mo2Vy7j8,iv:3zB9m/OfDTLWeEQ/7DBJh4k6a9kEkE0uvHQRfH8ywR8=,tag:ZXmQBFXuAC3O/yhbNUBKfg==,type:str]
+ansible_user: ENC[AES256_GCM,data:eZKXk+5L,iv:VmAF7YUoHxbsd3ayGEjEK19ZH7Rve2QoWYjmZvd9GbI=,tag:3EqswxNccmphvSeVoonj2Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBudW5FcTBVZ2FkWXhjWEg3
-            cXU3SDJVaTRXaGdDb2M4RkZoWmNGY3NocmpVCkk3ci9WMWpQYXdxSGZHdUNaSlpD
-            TmRuMjZWN0xDNEM1UUJqVjhCR0l5RFkKLS0tIDBsbVBlK1I0Q29Td1d4UGNKcHpo
-            ZXRWRlRLOE9UcXEzT3JNUjdsZFRBVEkKO4kpHpSk8mKiViHlYAHtVt/2fqBxkXKY
-            xRAlHV0kMzH5q2ejCs8PT3Z9OB8d9kuWihwngYUVXQ3y19MppZ5UFA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTL25pNFlOZXZmaXFqNEVK
+            Y0ZEUFZ0Q2hvUWhlSWlWengzRElDRW5WTlQ0CndYTFFpZmVsWUx1NU1jNTJnMStu
+            TUlsNnRqYTE3cHVpUzYrSFhaaVR3VHMKLS0tIDJkQnpwWWpkQVZxMkFrMHNyaktG
+            eFZ6cEx3Smk1bTVxdGxzWjI4Wm5zRVkKvCCqOh+G/aK+r7kYdhvtYHOmO6yl8o9W
+            e4BoubZWW/6hyGSdtykqG7kumFI1n9p77hm9GnIWhaF3GvuBiu26Og==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:54Z"
-    mac: ENC[AES256_GCM,data:8FcJOeuI84gjQi5QN+QzZI0CLYuQmt1KN8cTpY1Y2FQ2MSboLbQqZ1CES0LnXA8tkhgvmGrFwqUq8MQQPbRxAP3Zl1fjXV1QsNSSlbx/QZR8gqJp/3cGpkvOAsEIDYBqVyS9KEvRiXEqOBsvfIwbEuGHYuUZcOcXfNtmaLhNADs=,iv:Q/CTNSq3+iX0N9OD8KI/yPUyXmCLFVMny0X4NbpEhJA=,tag:TeMWxLVLAsgJAS3IzRIhzw==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:ZmMyKZ4PsxnxCu848kdNYBw2u20VoejM4SUiZj8rtjtTAi6ccKWHLOu8hmGlHRQGrKp08XpdF1dvojhlID7/t7dFfYcO/M72Vz+P1Ei/S/nQD6a/60y4NZROOtepAs+rT+1kolcGwVtvCISLXXDks5uS1qrCcbmFPwUMPyvVcrw=,iv:Gr2zLYjOSQ47EIJS3t+8eihlfK6gaFIabZXUII/QH44=,tag:JEQjLJzP8XDovuNEki+YQQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
