--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:l5cQMqoU,iv:iTmOQ5J7/2lL+EMloJ95PQ9q7CUWd2TXkOLRrhQo6TE=,tag:ro31iMCu5pGTEQqSqKmM8Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:Nmo8wJ87,iv:sRz2/7bbK8DaLwth1ni3+HpXKdssegZ1d9pX6CNgha4=,tag:Rc6UYnVDU9tGoklD4V0VcQ==,type:str]
+kind: ENC[AES256_GCM,data:sxmaJ6sq,iv:tx8qNGOFfmo31jSrWEs39ow3x/e+cS+nd/QrRkdQhgE=,tag:rxnDHN0M7NfMhMV9v3Jtwg==,type:str]
+ansible_user: ENC[AES256_GCM,data:PMvEX88E,iv:ZlCm4iJpFnpJhVLv1C07pbDi3Ov03GCos3qMsZ48nSQ=,tag:E3zM8Nmuvnh1R5n/Ft+00w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3bFAyTktRSVQvNjVLTVdM
-            eVNucTh1RTQ2cFVkLzZydUU5a3lhUUxGUURvCk1sNFlhUUZPRlk5ZXNOT1g2S1NR
-            eHZtV1FkTU9qOUNmV29DQksxQ0dKTEUKLS0tIFdTODVqNnRiZng5WkZSOFVwWEZz
-            R0srNktvNzVGSWZ4UTAxZ0xvV3VOYjgKUpJ6/6YJJqyKSa/N1c/bkJ5LgZ9HNBRM
-            jHhuV7VSoE9HPR5yFJWb9YdDtwzcCVmLQ1cE4jcxftHTKMd80j8LQA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtdVdqUzZMdXVpN0lTNjN0
+            ZG9OUjBnZVgzeVZLWkdocm9HdGtqVEpQdTJJCnZZb1Nybm5jcjlHUW5ZdkhmcHdV
+            UXA1empvRmtDZW5uMzdFM1hxaGVkc2MKLS0tIDFPODlGWWQ1dDNyWUlBMG5hYkhu
+            L2ZxZUgycGpJNzhWTGt5WGVSNkFic3MK0cYODCscUKZDsdseIaNOvI5cKIWSfWfS
+            cVOaXro+HfsSxV/fYr5MYT56C8QSYQr9YdFVFweLAG65oofM09Y62g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:54Z"
-    mac: ENC[AES256_GCM,data:RS++wfHec9sOxCHMwOwcxyDowLGZ6CF3A9nJT+xy6lYms8s833tDiCsag674cZr2o+mZUUZuS+CiXjQY6U5nm1Mc5GsWszr34KHxaKsXl3AQ3xRsLeiz5j3mdmfAVpmgW9lNwu20SQzXsxKyFK4tEFAFgalOCGQY4pzDJZwDLVg=,iv:ZoKMOizsaNSTXWxYAB35wXCvHHAXTHtISZKv/g5KPjM=,tag:YPSs9nyNP7DEg5CwqLHeIQ==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:WHBdcJ88w1cmzwHalve0O+axsJke7lzGYghe6rViyzWOVN772hVwo1PIwcpvT3uxZ+yjuwCLltIImszIv9Qsrp2U4x+0yp2HQv4ZI3vd0QObzNV0QY/gpSt8ShHUUDw9WEownkCP4fFgfqXceS/wYsaSlEfORqzDGrVCWf4K050=,iv:4f8zQqOaKtKj2u1032a+lbeX3AA+bjSZHBerp7WLPbE=,tag:xF+xgnfaXLh+SZidH5gySQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
