--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:VZnyI+II,iv:Dq6P3ydAF5RQLqQflr+EorBPTJJXW9FmX/gY2RzvkCA=,tag:ck5raN66Zyo2XrT7MchZFQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:7nVYTwmu,iv:dWmRkFUpcsrJ7MbIu11EOw6iQzIwWbIrkK8F00jhXkU=,tag:IPFoGp7yj8UXqCZz20csKg==,type:str]
+kind: ENC[AES256_GCM,data:kPM4SiVh,iv:j3eUcm0OVTBUEGMLA5yETtG1+H52oVwTmonVFCpqtGk=,tag:eVJZ8oK4Ekjz9DYrhF9vFg==,type:str]
+ansible_user: ENC[AES256_GCM,data:veINZ6Rz,iv:M7czsgTTz/uig0egk+TWyYgItr3cDh9Mu4CkNj5goVM=,tag:QwiKqc2Vz3fZFUOzmQcRag==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEaEgxamhoQzFRRlVpdUFa
-            V0phM2puTHozVSsvenF6Ly85VnZ1dU94bFJrCjNGL2hjT2xjbnBIbFZHZ0tWcXRB
-            WUtJd2wxSU5LL3dTeE5sY2NEUExVdDQKLS0tIHk2aHVCZDNTWU1jVTBhZzhMUHc5
-            MlVMQVNwVlhqTVlTSVEyS282RU5jWGcKUqlZgk5QmjGrBywzXuf4FFoEZ5ceH0SH
-            PvcpFFz6O6QRHA9DteTbxvRWbZeVcBlq9RxOn8ERuiXZgzzN9b0foA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSWk9vcGRJMUJBNUl1S2E5
+            eXorenM5eFE4b0RpTlZUaWRVOEFLYzN6bkhBCm5DbmJ4WUhRRHl3Nm9QTHZTNG96
+            eUk4ZVZHa1NzT0hHNUloTFljRlM4T0EKLS0tIDMzZS9OWUFiTm5URlFoaDFXTEJX
+            T0xpWWU3TzIwQTA1VFFZTDRNVThZZ2cKBkMXZfZo18tZh1UrlbrkWaQVtcl7H9dn
+            r4zpx348ANJIKWjgou5k5bmDlbXOZ3Pe0nRqfOwJjUxkrP8RBVya+A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:54Z"
-    mac: ENC[AES256_GCM,data:stGDny+wg51vrtCskldXUNGhtFcNUGqcda4AFoA39AIMbRzKZYaAoDIk2RaF4jJa2nGcP+7Ok+iRC6kCS2XywDU3aV1R51uNtJLHBOSMKqixesE/JnbnSkYsLaZ+tdnXz1vHhx2990hKzk9TIyRjcx65cabsDqhHlM53QpRYbnc=,iv:2nIQf72ehVsEE97/shKbywB7bHmoVyaeGgASPAXuCOQ=,tag:6NMru+3bcjS1YqsEqprvSQ==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:c+WB1Wd2Gp6zi3PyZW0VACk7rhsbJMV8QIZCQwRf+VK45n9B5p21hbJWcteB6mwB2hN9YsJ/GoODrV6sdpfHEo6vTVogGf7X3ZyHvlbZjrMaFuNc1seNO8R1N1rvjFeLEzgKoXrKIU/l1k7Cl0ls1mVvkoOhS/9YCbqM3D+or1Q=,iv:C9sJbuFaLMorc5SFO3hUtvUNEz6t0OZq9llA+7K4YME=,tag:UVzKZF4BgxCAvtKBTIN6wg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
