--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:M6qMBDlw,iv:vJLkjw+tNjMlUL1yTktX1mOZ/F/dIKJxZ8ltTurz+Ss=,tag:BnozIpBbRlTkPLOgxi6QXQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:u/XZ0xFK,iv:ddiyVlRRbtZTYIpLMQ+2kNbr0o85DT3YuYOETTnpUSs=,tag:RGp5xOpLBjX/BxOLwtcCWg==,type:str]
+kind: ENC[AES256_GCM,data:BDW6fPka,iv:/VfqHCoNNrDKms6ApgRJwrfDRex0JpBCJ6EhBbpH06s=,tag:5cqz+YG4AD1QRDU1BmlfhQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:X+5StDv9,iv:8j8APV2BPsZy6AvySoeWHLtGC0LYyVoX/JDtgHuKfQw=,tag:8xEmPXVtGhFGQPLMBegtsg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtVW8vbnB0cU5HbUhxeHls
-            eUx2S0RVcFBiaXh0YVAwQ0lzNmw0UkQ0K1ZzCmQwaHlFYWY1MGNGb3UrS2E5TkFR
-            SjlBY1hURUp2RmVmY3Qvakc5bXplRTgKLS0tIDRxcnE4NEZlYXNleE5WU1pDRHBp
-            U2RPZW5UUm9yV3JXbC9KaGx5RTJsZFEK44Kb8yPbS/bqQUj8TmbTEVogVJQEhw5Y
-            WhNH5uVilwKJefbxmxNWeOXP0uN6B1g0eVxUyK+ELuKLxI+IHDJhBg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6d2kwaUJuS0JGUXNhT2hx
+            MVVlc2VtWkdpVHdDYTAxNEViNDNTRTd4bzNvCmN5L3lFUmtZcnJMR3p5cjJKRTho
+            MWNVWmZpSFRNQXdqbk5oMldyZ3JBbDAKLS0tIGVRaUhCMlphUEgrU0pzR0pqb1FS
+            K3AzU3JPQzlvOFFwcUppc3JKVmdSdG8KGCmGcGLQfTZoUnPCvDLKY62OsNMkyhla
+            gDDI8XAtSYL9O0ZnHZqg57kSxkVnvmCnPqfh5oJyJSacTBWHHI7ifQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:55Z"
-    mac: ENC[AES256_GCM,data:9fGj+MKnl/6N5iStTTsaocJaC54b2lBdUOLux3a21AqkuEUh1QXI9Cb51/1npdVmwNzh1VI/poOx4pi+4x1kM97dP8/9MTeXxcEV1NKRROLlWOz/fJg8i/8BhIxQILUmLFyGxYDyHbAf0//nNccn2w8NQ2rHTaBCWPfQLHKHgnk=,iv:FS0NpilaS11huBKQlEJGRDo87ph7VIXn0sojH0JN2pM=,tag:f6AnK6SHNHjuNFzQVG04zQ==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:NXHYxjTcT9YBNqBy8BSIwdeKoWi+RVaHs7KysWsP1/7vrF+h+DOu2sJslfaejoPsjL/JUQAR1aqHI81XmsrvDITk8U4ISOWXqLgdKG0uOgDUkS2ZUbNOZqMhC+pXlwYICtGV7HtJNFlJ3oK0O5COvSI6AuMPSGAogK4Pvdaz8Js=,iv:+cKfpRwqV/xgo5mXdlDHzB6XRSBPGP5k2VdJtaM4TtU=,tag:8FctigACH1rHNB6/uLP5RQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
