--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:vQ4Wfhhq,iv:E43DplWG7iWpmkY/A9XwGv8I6A3SbUNmSTvPMzHr8As=,tag:mx+b7+4Y157hHwv1yEWiVA==,type:str]
-ansible_user: ENC[AES256_GCM,data:orZBz7lS,iv:vbgsjLLN5kaCRSNaX4E/7DF4G4VSZqWoJVHHkJZVaGQ=,tag:2JdXVji3fohRJm7BHnSSJg==,type:str]
+kind: ENC[AES256_GCM,data:0qMEGFmb,iv:kAI7FDCDinXjdBD7wwrufIKpV23p97h8spgn8YwZkRM=,tag:RBl+B63kcwFq+RLwLXFmfw==,type:str]
+ansible_user: ENC[AES256_GCM,data:RqaD7Qcp,iv:RmoZjIJfgqm9QCmRug2vTtwblhMkn6aX37tBp/nwfS8=,tag:lzsTQa22gq2FEYuVncePkA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsQWN0N1hXcjhRS2dBSmI0
-            b2hHRi9YSGNKcFVYWG1LT0dscXdyZm9yb1Y0CmNhUWFOQU0xd3NKODhsOS85eE9Z
-            Y3hXKy8vRVEwU1FOWGN1Uk1lZ0RBa2sKLS0tIDF3RHBKckI2TzJoTVdNU0wrR3pV
-            ckZ3T25mdXZSOUVUa1d6NjNLNWRYc0kK/BvQA5qF6Glh8Dthyw+KBKbkRDnHUHLB
-            hkOa2bAcTUDBYO6HpXrdVTK9/Dv6tqN4ywmJmyCPKqEwNMsslm3VNg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpT3dqenMrZXVnSDVWRWZF
+            VnRTNDh6V1hWUTd2Rm4rS2lRdHVJRW9qS1U4CjB2SlFuL1o0d3ZEWjFWbGRIR09C
+            ZTJ6L2Y1c3MvSUwyRDJaQXB4RVNrdE0KLS0tIG12L2VQMW0vZy9GNVI1aU5hZ05Z
+            d0V5UUd1RHM0dkVPZm9mWTRHNzE2bXcKmlX2DzynRFLBFPU9tkMaUU8vVIEPh3zB
+            M/T1LNuQ4qzIgjP5lwVtlzhjH4QC63/x7smHn8N3e0SKKXEz+ZnLbA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:55Z"
-    mac: ENC[AES256_GCM,data:MTY1BRpjg6XOL6ui3oEwVoG/mZT20pwCPf/29mi1uCvLl8lQmsyo2FiZ8vCsINUxgtg5poiWG8sNp5k89CQLHjeP3KI9VFDbQ5s0xl2spMo6r+HmwJW3Y0+Sp+EkZO+tVJe5KtrE8Y1nKZchZ1xk1Z6XmTovZyAMNHydFbiRQ1M=,iv:brGy/VvAr8jUliVtzSTPrB0kpi37pR4Vq9qZft5XVSQ=,tag:bWToT6aRrYkJRapLw4lN9Q==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:roII7kUPAxiSeCKupm3UtEZwA20o/BLfx1imsM/3udzxUscKwvVApD+12cTUQZFAXem6bY3BNl9y0GZO+VThSAtpuUjJ888mlzAvHCA5M715SacGG8zfv52D0ZF2Uax/jinV5F5mCYaKXlEGN+wR/vcQDM9ZGH3Kcd7Eup8phzo=,iv:XzqUUrIK4wo/jlZcl5NO4aLqkS3ELUdZWIgJu6LhGwE=,tag:7rH8y6XtB062M9xJb9R84A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
