--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:rvS0/xqh4uY+hxv0kkvOYW/Ay2SC,iv:kJrxo1Vt+vU8cWJHLlZCjoDwfVqxGHGblIgHNP0hv+8=,tag:JPyhyA3oA4SaCOHCiTOLDg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:au21wQSu/+q/AnrUs4zyKMdk+KEwiqzmx+leRZq7R68sJjwmyw==,iv:DlvxtkUhBsWbI8h7HVDlxVimZm8l5DXOhZRGjh+LhK0=,tag:g07gPCnka0f/D9oaUdiT7A==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:uP8JIUzLYfcWVRc=,iv:JezRgh6bEPWGqY24uQ1CXEVxHCk7wO893HprADAtDew=,tag:pmSq1kfYj9Xg+/kkNKiRFw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:S0By7urWVXi4wspEDqWWS+HWorTE,iv:+Mdlmts8G9ducT+RaLtW+hjoJPmBtUYYcarQdCw3oJM=,tag:kTIZBCWix6SE2AA3/i8vkQ==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:5sOrmMsHL1uK9ABGv5y+Tzo8TXuIsen0EjPxOqDvakC3BWczwQ==,iv:6e3wVgqfWrnwErsteo9Z2dqc6phJBsb4E56SyVtu5aw=,tag:FFeMn+f3AkGfyVhg7Y167g==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:4jGVAIBFa9A42nk=,iv:CgKFzX6NtdgI5f4K6EfO74JJLKjinon3C9ptDptkyQI=,tag:0Iaqe5JNkTVB18KURZ+6sQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlekJQNGJGRGNmNWZZK1hy
-            a3BxR28rVklOMWV3Y0xSZmpLYlRxeFRTWGx3CitaTGd4ajl4OWM1dVl4TlV2Nk1X
-            Vi9xZ054Z0F6ZGVJTEhkYzNqQjlJN1UKLS0tIGtXTlk4NVlkZ0tTejZXR0hza29G
-            UHQ4enVrd3JWdzZsZEU2MEwyVzcwVUUKEa12jT/VjdP9VtrRaqpTDqFb4mZapLC8
-            ostXvSOfAzP0+bDefK/2W87jSx6j/QLpci7bZ038E83wm//ZQSdbAg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDOUp1eVBMclB2Smo3SUJB
+            WGNyRHhNWWpsVHE1RStMeVNPTXdnWXFUL0VrCldrSFBDVFN6SFhac2dPNnBLYUc3
+            N1BjYmFJZWFLR3hBMFlYUGZxS1JSWUUKLS0tIGNXMEoxN0h1WDY0MnVuNEIvY1BQ
+            V0R4VUlvTEY4bDR6MkpwY29VdERiNjgKg9F3bZs0DYkCEJ6fgZWlv7UFb5hgbvZi
+            kbxRheE3xPCD8dTZ/Yhi2RtJwFOHdr6vIctsilwPyNSK4wHzEfhhhA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:54Z"
-    mac: ENC[AES256_GCM,data:uVKoFZ8gKqWkV3n67Ggtx2S35c11HdyGAp+Gd2pkFi5knS4IZE5twpgqCS+3HoyQ45V9zejQjbyCcO+eMVq96T9VtscLWgXAMtVN7TLTY9qI76+uWVGKKGDNMy9bjr7vFQx4ySSsk8UYr3W2FQzzaWyGNMhXMKVlfFylJ32MsgE=,iv:vICjFYB4v9cAJ17INbdgbZhzXwfzhqurmSqf2rT0OCw=,tag:t4j7+u1HpdYKo86lOkWYIA==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:03q8YEzRtbjnxind+46+NWHnuxsNuhVXPMyFm8W4L6fqoUTliP+KiRBSsWuMFHThQU7wMXWkqqfi8gj9bepHcA1jHHv1kaMSrlx7RBCaeUH4kEyQX6GuCI7Sjqr/Y5PmIAMj5IImoUuL38tb6U6vav4RaSECOFoKWal6n6MNTSc=,iv:zRSx0HnExsvBuLWO6e9rNdlgSLs3WNN8JzxLtrYbWcw=,tag:LSxHrVJYjjsuVsqa86K6jg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
