--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:5vJtHBW0,iv:xqm/siCwBtbvwrcktuw0ssslN1owR0H2XLacm76Q/jI=,tag:fQ+VjRwcoNbBxNpXVBU9DA==,type:str]
-ansible_user: ENC[AES256_GCM,data:a5MUw6Cx,iv:QbTXLccKGNRKpjZLaDiQY+FeI5bQ52ewPjTnQe6vnOs=,tag:9DKwHegFQMlMaclU4rcikw==,type:str]
+kind: ENC[AES256_GCM,data:rdM1nXtj,iv:3MGuDC+x7d/KiWzHwi0qlg9lNqapolm7RihTHgo06Nw=,tag:dgHWS7GMXdug52v+neDDNw==,type:str]
+ansible_user: ENC[AES256_GCM,data:iCycKmzx,iv:f2TWzo7I/P6FNdk1TTXwQTd2TkltqwPJrVGAu49o/gQ=,tag:1CafWA29lEVwki7WKbXNlg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzZFZ4dkpsdFFzR29pNThW
-            WHRzLzJuVW81Skp2K296SWxUM2NLeW5PWVdFCmRKWXNuZUdUTy8vSnBqNFlPczhQ
-            SEVwUFh2VUh0WitnMVRXb0FicXZpWVkKLS0tIFYzeGwxeWZPOTJMTlJKdlpOVVR3
-            Tm5TNVorTS9JNTl1eUx1SkNsTk8ybFkK/fzLIhc2uAu7u/fj9Q83nRs8fwS4rb/B
-            RSC7YS0s06B99+iLZOP5jvBlorE2FUyL1QyKec3Jc/11XZcDeIrA8Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4QXljNHNnS0V6WmFVTmdx
+            R0VEbjJudzhIVm1hVXpnMGFSUXZObjJQSmpFCnpMRXo0azJUUXRXOHkrMENEUWpX
+            Y3lHRnd1ZUY2WGVxSWNsVEtZa1QxS28KLS0tIGNvb2orSnJyY0U2NmpKYThuTzBr
+            bDlSNkdoMXE0NWg0em9nWCtDZzBLZWsKhiS0cloOtdBDSgO2BziwTOXw+iLoSKYc
+            KHJooF12xsIev8KaDvwCMAh0HomW9GjEWsgSmWu2tWKefak0NKPJqg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:54Z"
-    mac: ENC[AES256_GCM,data:Ji/SRPKqBH0wWIRzDbYoz6FvTAF9uoQh/RSQ0Iz88I3c0OTttgCPNbqWodSeNJloGcV4yN8m23xshFVQ/SQsUqTkva1FIVXLshjD41z8CXpsHimzrHyTdZU+Zs9huz9oB0Tc129jlLa5OKSbHEXDf+1+fprs50U8zZEgqN/+lV8=,iv:LP87klQOH39suqReTSKrY4oL69NX/pijWnY8PhnKCdY=,tag:NySvG2Qip9O/3RRzkXk65g==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:98vwDICYQ32f03MP2D+NiJbWSrD5NDNOsJNlgpytlgESRsBC5nzNmU+Pcgxg1ckyJk6HRTi6yzL5uklKSo76v7dyNHZ4X5anWKHax3Dq0k3tL3D40wuBU1L5DySuxlN7B1vAAFq5sJ1xZneMPZIAqZTKU+aADeD3jSW1rg97u3c=,iv:dk5+TBqto1aoQy+tqRabfMaB3roxPxOLw7DF1ktyBG0=,tag:Q+51FvKs5jAZdK0XyIhT9g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
