--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:0iNwNuFQ,iv:8Gd4p4GwyKJmN9XY7zSL3HJGvJwF4Kvp6y/i/qX2mJc=,tag:sqQPXhs7KuIB31vJhhGnfA==,type:str]
-ansible_user: ENC[AES256_GCM,data:63wsowxo,iv:O4Dd77i7HNHx0xwbsDnMoyBEHHLsQkZDrmXNDzuHtT8=,tag:ZmIDb9QJy2rGuE9Hpg5Mnw==,type:str]
+kind: ENC[AES256_GCM,data:7Sv4q2Oc,iv:6di1+m6bZ72sNbWqDtnbyHm8s41b1UehKiHTNS+WYqI=,tag:ZRVXcbRFH36FpxBnBAQKog==,type:str]
+ansible_user: ENC[AES256_GCM,data:vRHcsk0R,iv:OJU6twpJnuBDXkCo4smf5jChxuVG0hOk8oWCxFxmkqE=,tag:IjINIpDfLC5G6uj6f2KXCg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYTlJIVDBSQnc4eDAwSXc3
-            LytZNGhvSFRzdUp1SkdwWWFjSDlDbGIzK0RRCkFVZEVJUllSNzVYU3pWVlZwcXRk
-            MGFqak1FTnEySzFVaW9tTTkrZG9tTWMKLS0tIFN5SUNDcEZRVEhSY3RjbEx1MEVt
-            UFhGckdkZUhwdWxiS1EwVW5UNkJtVTAKInG1PIjETga+VMyFivM6nvtIE02CQeqR
-            JqeIYdQQPqr/2e+MuRG/WPCdY6RHyDASiDggHkC3fBinRWaqwSlhuw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWcSt2cTZXYnk2R2RrL1VT
+            cWYzV0U0SVo2OW5pNUFNQkxhV3htOEJlazIwClBjWjVZcjVVb1pCMklKL084UGxI
+            ZlF2ZVo1a2g4RW0vdFlWOCtoUGQzVlkKLS0tIHZuL2lNU0gyM3FJTW5GcFR0Q0JX
+            d2JySlk1Z3VPb0tmRFlUNEVlak4xQXcKirrMW6YwFbD0eznG2GQslBL7JJt1wiAC
+            WOhf2Qtc1xBVww0ZQ34x9VS6RytdhjtO+5ckVQ346rU+0KApZ8+Cgg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:54Z"
-    mac: ENC[AES256_GCM,data:Gzxt5zYIy5x47xtAgmLUoWb9XBd79tCaMi611CUTcJwgTkIkA+KyNzBNVSpIa7Cr0+Swk4PRgmyvx81cCrqkRkZgnEOn7YHOeaNcUK037iziLz+i66F9gNg4mmB+UMZ7fCqNj0SF5a7W+6Sww54C1Q8wrDTo1I90U6zAWEytyjU=,iv:zyIgO9He0RCQeegMF6MRmt/4vxVDfKs8gqOfVe72KY8=,tag:4snkhvEALuSMVIMxu7a2yQ==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:L2agM4/mllJhsPL2Xc/PaqpZhhvaXoShviYF5km4vrbYfWYY7lWZ+hUoSJ7MXZdrMhDKFMSJxlXdp+q0vUhPY7xyqEvv+0nWGf8kWCx7uFzQ34A9a5RBS0b8BM+TokAjiwDex1sNrsLFPd9TnIqkoD14cXGG4Q+e4nXQQL4Yqx0=,iv:NdaCwLYd5ipO8UPrLT28E45Zwt6yfxzlorTH4NUwkSE=,tag:K0qM9SZEoImszmsy/jOCIQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
