--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:SBj0sD93,iv:ag7dVE6lRUR9BR9vYJV69FXMbsx5/cWWD9E9A65XhIs=,tag:t/7HVwhdei3NyLNPB23v8Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:kCegiKc/,iv:fXCsaIPRqqj/BWmsFWCx/jCPayp+IUsuY7vv6LhSfHo=,tag:sd8MlKxkMbf6ol3F0Kk+jg==,type:str]
+kind: ENC[AES256_GCM,data:sUn1CmRM,iv:h/BnlsioD+w/OVMDI1YrMqOs95Vs1lzJY1e4uodWed8=,tag:8hmCy4/B9+EwBeLzzJuX3g==,type:str]
+ansible_user: ENC[AES256_GCM,data:4ZSHqxqt,iv:oPjCoKN7e55VfxQ/xZzGo73py01aDHIrq+fYDusG8U8=,tag:sdUQhzWGBVwSKdKPP0TQHQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAveElLZVVGZFhEdC9tZWhu
-            TkQrUUJnaVRCbWpET0NJc0VCaVNGY3kyVW1RCmJKb0Y2MmtvcVFFeWpZbFYxWkFy
-            czQzNDlDWFFqeHhEUDVNMk9ZYjZVdmcKLS0tIGlnNnBRUU9SRFRkNyt3WjRpNXpL
-            OWZrWE1FM1RXcTFHSXl1MXJiZ3FkakUKxuqH3ulMDHwwx/nSw0VaOSLWE9fjIguh
-            zLz1SuXG0wiJYKZRRaRwlLiD85qJla57BTJQQuJDnslvmRJEpmgWiA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlVkZ0a2RIZklvYjhtMDR5
+            c0hUZVBnOGZUazZIbzVHc2k3eERhWlZpc1NjCmI0TGtYOHhCR1ljVSthcnppQXl5
+            aFF5Z0JPZlRPK2lremsxQlhSYWRWMWsKLS0tIEVWSE5RSzFHSTZVSzBycHZtdWYv
+            RTJtY2ZjaEpjVVg1NTZ2SWJCeENWR28KZP2X88s+wftu7XVXdL7vdAsUfusFbS2z
+            7Z2yta2ZhhuVxdLhF+7ljrcgbOAhyBPgF8bDtYaVezPH25+ifbDhFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:55Z"
-    mac: ENC[AES256_GCM,data:S7Y9bef6M3QGEoIdrQcvvp33xMdSliE8SQn0nD/3HjUlLSEQUX9YNbTZD1NGz3Ib4tqZiDTAI0NRo7vPy062AJo0e4fbAuLbq1m9bERTYJ916WXg1656QUYvsjeGYFkit/80sgCDPHVSaXsIuSFjTXgwu8u3mLIzTXvfAnQUPaM=,iv:WiDw7vzTHzBCytBTfKtNYj4k7BjaisqRQdacD9J4j84=,tag:RxRzc+5Zdd6uZHtiP0XaHQ==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:sedbLdtz7xllfMMvc+0CDpFHo/QX7YF5Ycf/cTvFm9LnGYH31ITBkGXhojMmxz7GcRa0nQsH2cV9pMfozsRFdfw+33N6fNuuB1yJaSMEud2R1IN5B4wWJbc3h2jZy+jfj9Ev4X6Rc8F+nycyyut1bODDZqWRjUGYpotSuTtIIHQ=,iv:G+abgXj0hsYfstXkw9oKRLctN7E2e+cbW4Wd6irE69U=,tag:J+UO+vKzYPxGliG9jw5nVA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
