--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:tVdqiQSR,iv:Te0Fx7O9J8gYY0tfQOHaDgka13oDVAOkjlkeanC5xNU=,tag:jS6tA5GpWIROS3QDbotQQw==,type:str]
-ansible_user: ENC[AES256_GCM,data:+vo5nhwz,iv:NBv/2g0b6vYYc2m2zVDnCwqECXKRb/JfFAjTJMOdROE=,tag:1aDSTIF9Y3Az7LeBCfPdLg==,type:str]
+kind: ENC[AES256_GCM,data:bDsiIuJP,iv:SVs8LmAFOd62lNMlsn1y7TZ2hoy3y5PZkzFWyxg5fJ0=,tag:Vhj6K+J02KL7BrdYR9Psfw==,type:str]
+ansible_user: ENC[AES256_GCM,data:SS/bgex9,iv:OO1URP3gYqECoQcd705U9kVmmP4ZFzITzy241liAQGk=,tag:+1GJlKIyTZrP93cexmTT0g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVbmJsZUxIbGZqdzVNWkVk
-            OVhkcTFVNU90VzVsUldOaE8yNVA3TGlnUlU4CkFuU0IzRG1jUER2M1ovS01qbUo3
-            TEYvSmN5cFByRk9BczlJSk5LWlJlSTAKLS0tIGE4NFVwc045U3RQczJtNEx6aDgw
-            M1BTSHQxV29Bc0g4dzh2Ukd6S3BKS0kKSjkrrNFgXC7Z7TenaZCHrWqlzQJHM53V
-            T/642++FgCPdBt5PjDBJ1tZeOoxE0qayvpjM05zxxHOteir5lyNIgg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArVE9VNWMyNkdGZnJvTFQ0
+            cGJWZmF4TU9wVjMzM1J1VzUwM0VJc1MxZndFCjg0Z01vWldtQzM4dm1XWUdxTGgr
+            Nmdsby80TnZrTjVFVE12RlJJSHFCYmsKLS0tIEVVWHBKV2plOTkveHBIRFVYdGZS
+            Q3NFSUU0Z1d5MUQzbkVjNWFyNlNVNWcKFvCy/xaw3TnSPuT4TtScCspKpn1Ruz4Q
+            gg1kPn/qO8BNdJW2e6uGNIuwGYULsml6zdyfS0Xc+fEcI92Mv96h6w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:55Z"
-    mac: ENC[AES256_GCM,data:NvFt80U2syRkdGHO0oyLyAzlVEMVKb28STdBEhEf7Whf/xAjh/Vgh6ZtCEP245Hq22VeDJ4rh3CgN154TdwLtJn2Hs8LsmZqA/X6JBY+iJPqNR0fIbGHdD85Jnjze9s47JY7FcFYW+ez3ASWc1RxYSXfObr5/LSsxqpImJrHUM4=,iv:0Evc442eR+epJSwqVnIt6uD9RN4XPNnWdy6KTufHfHY=,tag:cDKPghgnFLwIF1uI7RdNew==,type:str]
+    lastmodified: "2023-02-24T06:11:28Z"
+    mac: ENC[AES256_GCM,data:E6yrMqshcc4TOpcf1ziteGEx/hm7mK3NrgnAndSVeh8bM2IvcmrTOC3pLjhKzTBNyKmRX1ql+/sqKxFww37e29aNYSp/xdyer1RIv5hGpCS8sDqG8RbTaIh3T6P6uw+MrmfaWp0nRnl4+oHbrwsjHBhlM6GEDJKEE5c8L7gemXM=,iv:KACfajoLQ5aAkeOEViJkqpDJ2fCGdlwbCOwHXkUOnXw=,tag:Sl5OkErIOL5zfUFsX1K5cw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
