--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:GY260vGTKvDsbys=,iv:mOOf8MDa0dg8WUyW6IHmkf+d9i4+WO2Fg+zacYOKZIo=,tag:RqbCzdlHlhmHL70RbopsCg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:6g9BV3D2ooqEKIDpfddv969PEUZl,iv:ze/c/emGfOq1WRU5KejwZe4wU80H7sIpftcN3ycevDA=,tag:TcHKO/8sVOod2GqAHuJJYA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:3elQCmHLoNZr3eC5rBp7p0AUZgyZv6UGUJK5SDP9dbQ4hlubjKFUiczrqHcFNbRfC14IYosu9Gyhgl4KRbAwnl/HUla1C9o=,iv:EKFDInb6N+rQswAQp0jvqjQNcQzH36icyKnjlnNW1h0=,tag:Ja8Kr6GfMhz0ft7RP/E21Q==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:df4kgvH9CyYEeFWk6vTxp7kLVMz0pqBDaTmYeCRP7uIHytw=,iv:KlVFk0thBs8bBtbYTN1GJqeeau+nC86qvbQvfB9SCjs=,tag:VqSxGopoHTzXCU+zKIqVBw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:EHUx6eVsdim3HkZlbeA0rdXNrQ==,iv:78+9k08t6G/d4qoDWCC8Fy85gpKZfrsyxypwHreHkD8=,tag:zRCGkjn55fuG5Z6+2Woaow==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:5pgF0Fmkgp19AHwIVi9E0FVXLEon,iv:xLKAjS6H0hPondrXOdgOUneZPQmATgBh3YxNbIXsPd4=,tag:DaejhBg1c9jVPEABaeWctw==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ugS7vXkHf34=,iv:i2kQgfAKGTvDIA8oH9T46sRlzAge4a5dM5v3aB64qT8=,tag:E5yMjbfSmVtcok1/RFiw/w==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:qjvmiUO1YNU=,iv:oZ4ZdnpL13q/b3Lb+p1KpqtPvnGHnpoK5mQYZx0RR0c=,tag:b0jeTcgB7ECTHNmYfEK/EA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:Evjs8P7EAUFs7gsw42rSUEH4fFPPU5WpT2NeDJRQrcEcFOgqvsRl8q3lB6miefBZQvwitDFq/aHpHjIJHNzRtw==,iv:XzlkfhrQEpf40TtRlqJvjyHD/qB00jPSSAcrpmUawQg=,tag:bOhGWEnl7TzShQ3NrvX84Q==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:nVYzv4ziTP5bagj9WESDWrc4rqR83oXchrt5g1qzGlgaGSoeYTqAO6T7Mc08AaNShNtExXg0Rcm+ECgDRW2Fyg==,iv:KInCZ8aEXUl2V7191IT28kknwvCxfhJRkrXQiydeqpQ=,tag:2vT2ZnE1ibP5gt52n6wCxw==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:1dPy5rVec1Vk,iv:VBar0Fr9FSPsZenmGQJVnsd6bTvKHRI0YNZrTGCGJGA=,tag:F4Y1KS6vAY+cUsOXF4B01g==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:oFurV8fNh8wbUKvk4KQC,iv:6PVMOG3+fwLbxjT3jUMOOprYlidmwBVVJTJG6M9gPdQ=,tag:aVAqIo+CTjOVVtx43kGp3Q==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:hWYSgD+qig6vScXnfU3eg6lM1FaELegtDfJfWPf2wJesVI4fiUAzs/g+ZfCWpnazjvQ=,iv:cIgVhUnRF1LdSYDog03eqiSt6kdze1CFOt6TMApxY/Q=,tag:R0Kj8hvLqqGZWzlR+I0EyA==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:B4R9KuYHsXrYnvr3vas=,iv:I2lqbe9DOfK+PBWlKdX7JC2h9Rbt0g8B3YmMxgEH/SY=,tag:Ctaz4SyD6OwDICNquuQHsg==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:E6ahyngrg/5QKuts5u7m2hxRJWM=,iv:u1+7tn4CR+zImDxe1xDDc/D1vQea5GkvEJKwWLeazRA=,tag:LbMvG6lUNhPbDvmbg+//hw==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:gVTuF+wisNQ=,iv:L9WMrOTo7Z8yFxNSumwnuLx8sankk+wD+qTGJNfNf3g=,tag:58HXyJGL9xmejwFXINa3Eg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:8khP+GQtU33D7tRwIYO7wXj5mLPz1LAMxH6HuBf+1npHsy0NTw==,iv:AujRm5qArYaxRaEPpOmYw7KnDQkbCuSHYNn/EX3eH7U=,tag:/TgIUp0o4ORyfIqRi0/z0g==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:TwneVJZmMBjZ,iv:Xofq8wziY2J8HNpWUMy/QRR9Q435C8U1+4HKbuW+xWI=,tag:kV36McNScqwqcAd3mGVNbw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:R7/RNSmgBAm/,iv:TdTvoH6N6kQiGsbkHRCV9VnvZ0rGu+BP3eYamCTqy4s=,tag:e14eVb26AOrhSNYYOI/uag==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:24xolgfz0g==,iv:q/9UoUQSbOSdhMqj/G6c4iDy44LRBXi9ZKWkjkzrsKg=,tag:tfIBhYIOIxDtOd99y6g74g==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:E0Rg1DN+gm8z,iv:NBDYxWnC4Hs6KsfjYn+eE9hY9vbSu5RJux9l4ApDv5M=,tag:HINR+kmBNS2JYVTI4jabzg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:LAkdpmVeRyZRMOw=,iv:JR+Po2sbYXbAww0mYeG1mXD9H6WFkREg3koFRWeVRiw=,tag:HEcB7CUStjQhl2JbhxbzAg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:3Y3YYH92p3YhSSyk9pSrjkx3S00N,iv:ZgJBQZbZFNIhmnnHspTWGuRTcVkIMKDMpRONCcwcOU8=,tag:bO3GpdCbZEfG9t+PlIIsrg==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:Lqj4MPR0nFc7hwE7gmvzj5UN/ZhYweUfeZgd3ysXow3MwwAGxwOWzTKPek5liThePoZceSSG31Nscl/ukYWd8i9OZ7A3yl0=,iv:X12P5j/XtB9Xg5HSrVegwjfyNVylmtZw6p26PaZPiTs=,tag:oDfjAkjqMLN/LGs4sIbP4A==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:ekHY56ecVD/Tcjn+9rko76SeOcRRMkrduXbJ3acHW2U5Z+4=,iv:njavrwyShEAk7AHTGWmYH4jHjAlsskOXsnV8LN2Af5k=,tag:0BVBck55Y6JZ/vVPByXe1A==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:er8L5CwKpr7MrW/PD5jpU9dbRw==,iv:pLUuJzEVGcZS4RUub+ukzUmNRMqV/aCe/Tm+7egXqSE=,tag:tK6C5w0t1a08HIK79JnWwA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:J10SVo5VTV7Ln9TcHJxD9E23H/y4,iv:GBAnSpvoJwTsjfKlD1sLLPESWrK1UAxcuvHvIDBwy2s=,tag:rmh9gN/NUJSbnSXR8WXqpw==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:/ChauD96JeM=,iv:XNOZ6k7Ii6QIe2vmY5GG+8SoIWXNSxjBvWEqURBnLKQ=,tag:DjxDOIHL3K1CbYIslCaAKA==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:ozknFzdG79I=,iv:Xkw7tIfPUnEZdJCQp+fErJCkqSA2B7vFu7ZA+OBoStA=,tag:QK14f/4hC+HBXBp1Ddhk0g==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:oCDhyxQmTrbCeHUB6sod/sMHkpYjGuBh/ZQoM0FZ0PoaOLajlrwvVa4cGmW8pCPR6itJh1zZOM4hlm35WyE5yw==,iv:JmpjwV672df9/1ls9bUJIWdHBjUvzdJGbIjq/k4P98g=,tag:g1N+H5f/yoAsTLGfarQbiA==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:7Hv/Wdg9F6VtLlt5kHpwE6xh3w5t07aKiAEtxqlKFcvwaUMUqHdzFH3Uj/Nyg1bhK0oIvkbwsHIF2xCsRDXP2g==,iv:WWuGnn0L+6Uo3c+dO/lM7o3S4NI2sc7a4cjVnq6YIkU=,tag:pNots5QFN8YBoMUfiSNiTA==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:SlxnVQ/+wX2H,iv:Trnioard2nwskoo6X2BZN1E1djhDKMCLyELvyhu/29w=,tag:Madveu6DItmIEe1Z6tqxUQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:o4nI9a1sMZTJjPetdd3f,iv:YXzavCuD2epS6SfGM3yKUgOmAAOyuX2yd3BtESrCKKY=,tag:ZHFmjwQ4JFK43Kt0Fd4CAg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:MBvvseQMllcIbYPRvJJ40Z0Aqk/CcwrLxG8J45c5igA2lZZpaCbvFaMZzTpRfJgQ1Rs=,iv:E9d2Ssosc0kpnZG7X4Jd7gJB9g79NG2vzUEmB6xNG7Q=,tag:aSbinWCUWLN4+Z/tkIEJMQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:MYU64qtd6YWI4+lKBSo=,iv:ZXn4stFEB2qEZ9tAoUfJMT8U4ZgNrtb2D2s3D9plJto=,tag:EKgBbV46ilBjgaIQF1rMIQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:jK0e6+1ZToworTPw4sDEMbYuews=,iv:7YayEBFS0E7YVRj4DQY+irWG7D760wm7kvH3liuX5gY=,tag:cfth9AvvjI3VqJTTAnMvZg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:x5KchtRctY8=,iv:gw7YYTkgTsMrPu7N5HuUgnYIRQlOVvzlqTGm77NK07g=,tag:RHgBLnJmuMXqWy9lQ9mg8g==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:AU5NFXlsr0FEOrQkJLuseyGiYHWeWx2kDxp59IGnd2c8oOUZdA==,iv:4CmPnNvuedNOU1na6C6WMNwzPYcBC/cTHpFucDjg1d4=,tag:ilaG7FsLLYkz3LjGe0gYhg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:mKvyxnf++5xz,iv:InwVTCqAsKujzWOAKgPKFCiX94SYAGUG9OHQ5rjwGlY=,tag:Zlc9PDL6auwGJ8TOKTmbSw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:WYO4A8eGVAEr,iv:DpHImRcE3//bf0uRtULYigXxqo85XXsw9/m8DJmjtqA=,tag:lVsaRulpfcBPpVWH06RFtg==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:67QboYlsCg==,iv:xAlsaqA3IebW2rrBou2uIOWpgVyHZ9/cd1b8ElOcY0c=,tag:JaagoUplJC8UcGAtY8mXEA==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:W28ZvQhCNNwO,iv:CHGgG07grvX3fF32tZ5SYIAnu/aGGsxGIR+A9ZZCiiE=,tag:047FEFbQGOH9PrPS7l8ctA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0RHA4c2sxcUZMVy93cGZl
-            c0p3TEU3R1BMRytOdSt3VHJDUXBCOWZtVm5JCklydUxxQ3RDUS9iSWFYVXhvRDVX
-            UVBHcm4xUFQvZ29ZYS84R3VXZGlqSFUKLS0tIGV3Z1dRZVNwVXprMlVHNU1kbFdZ
-            SUt4Q0RQZU9tSWlzZTNJalRJdFpGSzgK370t6F8xtpBwkvWd+frQh+3pls7OR+FM
-            JZQ9bdTrxspxgOBgs8oo2kqq7bORtJAUpM2/dw6LbFQfJoxLPT5MIw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTMzNQNFFzVFl1QWNuR0M3
+            aExjUkNCSjFNZS81czJNc0VoVlJJVmp4REhVCkY1ekQ4bERVZXFmNVVkVVF5OU5u
+            OGMzVmMwc1N0RkpFbVdpRDJuWnk5cGMKLS0tIGo2dzBSZW41N2JrRjlXUEdwOGZQ
+            Q1FIWGNrbnFjdHRaK0JtSjZZaGxEZmsKHwpcicWVGSFKK8wBs/GmfytPNj0DCQRc
+            Up4RJ8+0VKQbBNxgGU1//NfRv4JMhyWwh7fsn/XFozEDCv41IxT9Pw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T18:58:54Z"
-    mac: ENC[AES256_GCM,data:/M3Rv1znrqowuJU4qYJO9ynoCvv7UX9bgHKl/c95OqsU5OvQC9mLe9h9uosUm/45q0flxsI3X3BO6Naf4tX6qXgPW0SheZAP0ExLYJhib5iV5IC7wqTaF14xSIsmAwf3hPvsoxfINfxusSejyUfttCv6gqtnghXfZMsTGD/J/yk=,iv:vuE5L7vsHr+RwTe2FrpOOIJwHf87XYLF2N9AT9eo1dA=,tag:+JT/8idOEx4+WPWZJFl9ag==,type:str]
+    lastmodified: "2023-02-24T06:11:27Z"
+    mac: ENC[AES256_GCM,data:+dVpuWe2lSdrWGLe29Tttvlhyz/IytxWLLZ/Z+ZRsojspkXE5NEXik6wZV4v0HWQAo4pYIA8GBYNock2JHb3HzC4Z9n7cvvKIuq4pHuw7+Y+uxAtXOtYU8BjZ4YbIKQV5TehrRswxURX8swTPK8/s64iACuxxlirbg4DYU/kH2M=,iv:4Ai4UJUeEDROW/ZJPVxGyb9tjYWeBBHjgo5WUwOPCJY=,tag:wpr8g/giJb4LBZSz+bEUJw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
