--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -3,10 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-#   - ./echo-server/ks.yaml
+  - ./echo-server/ks.yaml
 #   - ./hajimari/ks.yaml
 #   - ./weave-gitops/ks.yaml
-#   - ./whoami/ks.yaml
+  - ./whoami/ks.yaml
 #   - ./filebrowser/ks.yaml
 #   - ./nginx/ks.yaml
 #   - ./plex/ks.yaml
