--- a/ansible/inventory/kube/group_vars/worker/k3s.yml
+++ b/ansible/inventory/kube/group_vars/worker/k3s.yml
@@ -8,9 +8,9 @@ k3s_control_node: false
 # (dict) k3s settings for all worker nodes
 k3s_agent:
   node-ip: "{{ ansible_host }}"
-  kubelet-arg:
-    # Don't pull /etc/resolv.conf from host
-    - "resolv-conf="
+  # kubelet-arg:
+  #   # Don't pull /etc/resolv.conf from host
+  #   - "resolv-conf="
   # kubelet-arg:
   #   # https://github.com/k3s-io/k3s/issues/1264
   #   - "node-status-update-frequency=4s"
