--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
   - ./whoami/ks.yaml
   - ./filebrowser/ks.yaml
   - ./nginx/ks.yaml
-  - ./plex/ks.yaml
+  # - ./plex/ks.yaml
   - ./cloudnative-pg/ks.yaml
   - ./pgadmin/ks.yaml
