--- a/kubernetes/apps/kube-system/storage/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/storage/app/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 #namespace: default
 resources:
   - ./pvc-default.yaml
-  - ./pvc-networking.yaml
   - ./pvc-downloads.yaml
   - ./pvc-movies.yaml
+  - ./pvc-networking.yaml
+  - ./pvc-postgres.yaml
   - ./pvc-tv.yaml
