--- a/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
     #   tag: 4.0.0.356@sha256:c7d3cd0d6b87673b5cf92e4bce71df22608a314a1c4f14fbd6bd14c74ad7af4a
     persistence:
       size: "256Mi"
-      storageClass: longhorn
+      storageClass: nfs-client
     ingress:
       enabled: true
       ingressClassName: "traefik"
