--- a/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/portainer/app/helmrelease.yaml
@@ -25,25 +25,25 @@ spec:
     persistence:
       size: "256Mi"
       storageClass: nfs-client
-    ingress:
-      enabled: true
-      ingressClassName: "traefik"
-      annotations:
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
-        hajimari.io/enable: "true"
-        hajimari.io/appName: "portainer"
-        hajimari.io/icon: "pier-crane"
-        external-dns.home.arpa/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-        external-dns.alpha.kubernetes.io/hostname: portainer.${SECRET_DOMAIN}
-        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-        traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
-      hosts:
-        - host: &host "portainer.${SECRET_DOMAIN}"
-          paths:
-            - path: /
-              pathType: Prefix
-      tls:
-        - hosts:
-            - *host
-          secretName: "portainer-tls"
+    # ingress:
+    #   enabled: true
+    #   ingressClassName: "traefik"
+    #   annotations:
+    #     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    #     hajimari.io/enable: "true"
+    #     hajimari.io/appName: "portainer"
+    #     hajimari.io/icon: "pier-crane"
+    #     external-dns.home.arpa/enabled: "true"
+    #     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    #     external-dns.alpha.kubernetes.io/hostname: portainer.${SECRET_DOMAIN}
+    #     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    #     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+    #   hosts:
+    #     - host: &host "portainer.${SECRET_DOMAIN}"
+    #       paths:
+    #         - path: /
+    #           pathType: Prefix
+    #   tls:
+    #     - hosts:
+    #         - *host
+    #       secretName: "portainer-tls"
