--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - ./grafana.yaml
   - ./hajimari.yaml
   - ./ingress-nginx.yaml
+  - ./influxdata.yaml
   - ./intel.yaml
   - ./jetstack.yaml
   - ./k8s-at-home.yaml
