--- a/kubernetes/apps/monitoring/influxdb/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/influxdb/app/ingress.yaml
@@ -2,32 +2,32 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: portainer
-  namespace: kube-system
+  name: influxdb
+  namespace: monitoring
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
-    hajimari.io/appName: "portainer"
+    hajimari.io/appName: "influxdb"
     hajimari.io/icon: "pier-crane"
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: portainer.${SECRET_DOMAIN}
-    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    external-dns.alpha.kubernetes.io/hostname: influxdb.${SECRET_DOMAIN}
+    traefik.ingress.kubernetes.io/router.entrypoints: "web"
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
 spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "portainer.${SECRET_DOMAIN}"
-      secretName: "portainer-tls"
+        - "influxdb.${SECRET_DOMAIN}"
+      secretName: "influxdb-tls"
   rules:
-    - host: "portainer.${SECRET_DOMAIN}"
+    - host: "influxdb.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: portainer
+                name: influxdb
                 port:
-                  number: 9000
+                  number: 8086
