--- a/kubernetes/apps/kube-system/storage/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/storage/app/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./pvc-default.yaml
   - ./pvc-downloads.yaml
+  - ./pvc-influxdb.yaml
   - ./pvc-movies.yaml
   - ./pvc-networking.yaml
   - ./pvc-postgres.yaml
