--- a/kubernetes/apps/kube-system/storage/app/pvc-influxdb.yaml
+++ b/kubernetes/apps/kube-system/storage/app/pvc-influxdb.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-influxdb
-  namespace: default
+  namespace: monitoring
 spec:
   storageClassName: ""
   capacity:
@@ -27,7 +27,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-influxdb
-  namespace: default
+  namespace: monitoring
 spec:
   accessModes:
     - ReadWriteMany
