--- a/kubernetes/apps/default/nginx/app/ingress.yaml
+++ b/kubernetes/apps/default/nginx/app/ingress.yaml
@@ -19,16 +19,16 @@ spec:
         - "www.${SECRET_DOMAIN}"
       secretName: "web-tls"
   rules:
-    - host: "${SECRET_DOMAIN}"
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: nginx-site
-                port:
-                  number: 8080
+    # - host: "${SECRET_DOMAIN}"
+    #   http:
+    #     paths:
+    #       - path: /
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: nginx-site
+    #             port:
+    #               number: 8080
     - host: "www.${SECRET_DOMAIN}"
       http:
         paths:
