echo server update

--- a/kubernetes/apps/default/echo-server/app/ingress.yaml
+++ b/kubernetes/apps/default/echo-server/app/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
     hajimari.io/icon: ic:baseline-list-alt
-    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.entrypoints: "web"
 spec:
   ingressClassName: "traefik"
   tls:
