--- a/kubernetes/apps/default/whoami/app/ingress.yaml
+++ b/kubernetes/apps/default/whoami/app/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
     external-dns.alpha.kubernetes.io/hostname: whoami.${SECRET_DOMAIN}
-    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.entrypoints: "web"
     #traefik.ingress.kubernetes.io/router.middlewares: networking-middlewares-authentik@kubernetescrd
     #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
 spec:
