--- a/kubernetes/apps/monitoring/influxdb/app/pvc-influxdb.yaml
+++ b/kubernetes/apps/monitoring/influxdb/app/pvc-influxdb.yaml
@@ -17,8 +17,8 @@ spec:
     readOnly: false
   mountOptions:
     - nfsvers=4.1
-    - hard
-    # - noatime
+    #- hard
+    - noatime
     # - nodiratime
     # - tcp
     # - intr
