--- a/.github/workflows/link-check.yaml
+++ b/.github/workflows/link-check.yaml
@@ -4,7 +4,7 @@ name: "Link Check"
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 0 * * 0"
 
 jobs:
   link-check:
@@ -14,26 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
 
-      - name: Restore lychee cache
-        uses: actions/cache@69d9d449aced6a2ede0bc19182fadc3a0a42d2b0 # v3.2.6
-        with:
-          path: .lycheecache
-          key: cache-lychee-${{ github.sha }}
-          restore-keys: cache-lychee-
-
       - name: Link Checker
         uses: lycheeverse/lychee-action@9ace499fe66cee282a29eaa628fdac2c72fa087f # v1.6.1
         id: lychee
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        with:
-          args: >
-            --cache
-            --max-cache-age 1d
-            --verbose
-            --no-progress
-            --exclude-mail
-            './**/*.md'
 
       - name: Find Link Checker Issue
         id: link-checker-issue
