--- a/kubernetes/apps/monitoring/influxdb/app/helm-release.yaml
+++ b/kubernetes/apps/monitoring/influxdb/app/helm-release.yaml
@@ -84,7 +84,7 @@ spec:
     ##
     persistence:
       enabled: true
-      useExisting: true
+      #useExisting: true
       existingClaim: pvc-influxdb
       name: pvc-influxdb
     # persistence:
