--- a/kubernetes/apps/monitoring/influxdb/ks.yaml
+++ b/kubernetes/apps/monitoring/influxdb/ks.yaml
@@ -12,11 +12,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  # healthChecks:
-  #   - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-  #     kind: HelmRelease
-  #     name: portainer
-  #     namespace: kube-system
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: influxdb
+      namespace: monitoring
   interval: 30m
   retryInterval: 1m
   timeout: 3m
