--- a/kubernetes/apps/monitoring/influxdb/app/pvc-influxdb.yaml
+++ b/kubernetes/apps/monitoring/influxdb/app/pvc-influxdb.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   storageClassName: ""
   capacity:
-    storage: 1Mi
+    storage: 1Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
@@ -22,17 +22,17 @@ spec:
     # - nodiratime
     # - tcp
     # - intr
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: pvc-influxdb
-#   namespace: monitoring
-# spec:
-#   accessModes:
-#     - ReadWriteMany
-#   volumeName: pv-influxdb
-#   storageClassName: ""
-#   resources:
-#     requests:
-#       storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-influxdb
+  namespace: monitoring
+spec:
+  accessModes:
+    - ReadWriteMany
+  volumeName: pv-influxdb
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Gi
