--- a/kubernetes/apps/monitoring/influxdb/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/influxdb/app/ingress.yaml
@@ -11,17 +11,17 @@ metadata:
     hajimari.io/icon: "pier-crane"
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-    external-dns.alpha.kubernetes.io/hostname: influxdb.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: influxdb-brad.${SECRET_DOMAIN}
     traefik.ingress.kubernetes.io/router.entrypoints: "web"
     #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
 spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "influxdb.${SECRET_DOMAIN}"
-      secretName: "influxdb-tls"
+        - "influxdb-brad.${SECRET_DOMAIN}"
+      secretName: "influxdb-brad-tls"
   rules:
-    - host: "influxdb.${SECRET_DOMAIN}"
+    - host: "influxdb-brad.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
